add free vcpus/ram ans status to node
